--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>WebRTC Photo App</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
 
     </div>
   </div>
-  <script src="js/main.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
