--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>WebRTC Photo App</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.styl" />
 </head>
 
 <body>
@@ -30,10 +30,9 @@
     <button id="clear-button">Clear</button>
     <canvas></canvas>
     <div class="images">
-
     </div>
   </div>
-  <script src="main.js"></script>
+  <script src="./main.js"></script>
 </body>
 
 </html>
